[gd_scene load_steps=6 format=3 uid="uid://cojrqff5vocjv"]

[ext_resource type="Script" path="res://Scenes/Window/window.gd" id="1_c3iwi"]
[ext_resource type="Script" path="res://Scenes/Window/resize_drag_spot.gd" id="2_xymxc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_es3h4"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iro1c"]
bg_color = Color(0.666667, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epasn"]
bg_color = Color(1, 0.247059, 0.188235, 0.588235)

[node name="Window" type="Panel" groups=["window"]]
custom_minimum_size = Vector2(250, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c3iwi")

[node name="Top Bar" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1

[node name="Title Text" type="RichTextLabel" parent="Top Bar"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "[center]Hello World!"
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="Top Bar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -15.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2

[node name="Minimize Button" type="Button" parent="Top Bar/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_es3h4")
theme_override_styles/hover = SubResource("StyleBoxFlat_iro1c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_epasn")
text = "-"

[node name="Close Button" type="Button" parent="Top Bar/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_es3h4")
theme_override_styles/hover = SubResource("StyleBoxFlat_iro1c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_epasn")
text = "X"

[node name="Resize Drag Spot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -15.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12
script = ExtResource("2_xymxc")

[connection signal="gui_input" from="Top Bar" to="." method="_on_top_bar_gui_input"]
[connection signal="pressed" from="Top Bar/HBoxContainer/Minimize Button" to="." method="_on_minimize_button_pressed"]
[connection signal="pressed" from="Top Bar/HBoxContainer/Close Button" to="." method="_on_close_button_pressed"]
